GENERATOR_OUTPUT/manifests/kubeflow-tools/pipelines/patches/patch-metadata-grpc-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metadata-grpc
  namespace: kubeflow
spec:
  hosts:
    - "deploykf.s8s-core-istio.stack8s.com"
  gateways:
    - istio-ingress/deploykf-gateway
